# shooting-star

./: #.DS_Store#  .env  .gitignore  .gitmodules  Cargo.toml  configuration.yaml  dev-diary.org  dev-docs.org
.github/workflows/: audit-on-push.yml  main.yml  scheduled-audit
migrations/: 20211011201637_create_skills_tracker_table.sql  20211228003329_create_diary_skills_table.sql  20211228005507_create_skills_table.sql  20211228005520_create_diary_table.sql  20220410172326_create_users_table.sql  20220817224318_create_diary_entries_users_table.sql  20220905234853_add_notes_to_diary_entries.sql  20220906230725_readd_notes_to_diary_entries.sql  20220909160251_add_email_to_credentials.sql  20220909161813_remove_defaults_users.sql  20220911230813_diary_entries_updated_at.sql  20220916170124_ratings_columns.sql  20230221000614_skill_description.sql
scripts/: init_db.sh  init_redis.sh
seeds/: seed_skills.sql
src/: .#main.rs  configuration.rs  index.html  lib.rs  main.rs
src/controllers/: credentials_controller.rs  diary_entries_controller.rs  mod.rs  skills.rs  skills_controller.rs
src/models/: credentials.rs  diary_entries.rs  diary_entries_skills.rs  diary_entries_users.rs  mod.rs  skills.rs
src/views/: index.html
tests/: health_check.rs
tests/api/: authentication.rs  create_skill_entry.rs  enter_data.rs  health_check.rs  helpers.rs  main.rs  show_diary_entry.rs
