[package]
name = "shooting-star"
version = "0.1.0"
authors = ["Ariel Raudsepp <ariel.raudsepp@gmail.com"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "shooting_star"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-http = "3.0.0-beta.9"

[dev-dependencies]
reqwest = "0.11"
