[package]
name = "shooting-star"
version = "0.1.0"
authors = ["Ariel Raudsepp <ariel.raudsepp@gmail.com"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "shooting_star"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-http = "3.0.0-beta.9"
config = "0.11.0"
serde = { version = "1", features = ["derive"]}
sqlx = {version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ]}
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
