[package]
name = "shooting-star"
version = "0.1.0"
authors = ["Ariel Raudsepp <ariel.raudsepp@gmail.com"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "shooting_star"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-http = "3.0.0-beta.9"
config = "0.11.0"
serde = { version = "1", features = ["derive"]}
sqlx = {version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ]}
reqwest = {version = "0.11", default-features = false, features = ["json"]}
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.6"
tracing-log = "0.1.1"
tracing-actix-web = "0.4.0-beta.12"
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2"
tokio = "1"
wiremock = "0.5"
